--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sitealaddin",
+  "name": "baseless",
   "version": "0.0.1",
   "description": "Web proxying experiment",
   "main": "app.js",
